--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -103,7 +103,7 @@
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
     "        x = torch.relu(self.fc2(x))\n",
-    "        x = torch.sigmoid(self.fc3(x))\n",
+    "        x = torch.relu(self.fc3(x))\n",
     "        return x\n",
     "\n",
     "\n",
@@ -119,6 +119,9 @@
     "        num_support=10,\n",
     "        num_query=10,\n",
     "        num_inner_steps=5,\n",
+    "        k = 25,\n",
+    "        num_tasks = 10,\n",
+    "        episode_per_task = 1250,\n",
     "        **kwargs,\n",
     "    ):\n",
     "        self.ml10 = ml10\n",
@@ -127,7 +130,10 @@
     "        self.num_query = num_query\n",
     "        self.num_inner_steps = num_inner_steps\n",
     "        self.inner_lr = inner_lr\n",
-    "\n",
+    "        self.k = k\n",
+    "        self.num_tasks = num_tasks\n",
+    "        self.episode_per_task = episode_per_task\n",
+    "        self.num_segments = None\n",
     "        self.model = Model(input_size, hidden_size1, hidden_size2, output_size)\n",
     "\n",
     "    def construct_episodes(self, ml10):\n",
@@ -146,8 +152,8 @@
     "        self.episodes = np.array(self.episodes,dtype=object)\n",
     "        # return episodes\n",
     "\n",
-    "    def form_sigma_groups(self, episode, k):\n",
-    "        num_segments = int(episode.shape[0] / k)\n",
+    "    def form_sigma_groups(self, episode):\n",
+    "        num_segments = int(episode.shape[0] / self.k)\n",
     "        # print(num_segments)\n",
     "        if num_segments != 0:\n",
     "            l_segment = np.array_split(episode.iloc[::-1], num_segments)\n",
@@ -163,7 +169,7 @@
     "        prob = exp_sum_rewards_sigma1 / (exp_sum_rewards_sigma1 + exp_sum_rewards_sigma2)\n",
     "        return [0] if prob > 0.5 else [1]\n",
     "\n",
-    "    def prepare_data(self, k):\n",
+    "    def prepare_data(self):\n",
     "        X = []\n",
     "        y = []\n",
     "        episodes = self.episodes\n",
@@ -172,7 +178,7 @@
     "        for task in episodes:\n",
     "            sigma = []\n",
     "            for episode in task:\n",
-    "                segment = self.form_sigma_groups(episode, k)\n",
+    "                segment = self.form_sigma_groups(episode, self.k)\n",
     "                # print(len(segment))\n",
     "                if segment is not None:\n",
     "                    sigma.append(segment)\n",
@@ -245,26 +251,21 @@
     "            inner_optimizer.step()\n",
     "\n",
     "        return adapted_model\n",
-    "\n",
+    "    \n",
+    "    #self.k = segment lenght\n",
     "    def _compute_loss(self, model, X, y):\n",
     "        X_tensor = torch.tensor(X, dtype=torch.float32)\n",
     "        y_tensor = torch.tensor(y, dtype=torch.float32)  \n",
-    "        op = model(X_tensor)\n",
+    "        output_reward = model(X_tensor)\n",
+    "        N_o, _ = output_reward.shape\n",
+    "                # op = self.compare_probabilities(r1, r2)\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
     "        loss = self.reward_criterion(op, y_tensor)\n",
     "        return loss\n",
     "\n",
-    "    def _split_support_query(self, X, y):\n",
-    "        num_samples = len(X)\n",
-    "        all_indices = np.arange(num_samples)\n",
-    "        # Randomly sample support indices\n",
-    "        support_indices = np.random.choice(num_samples, self.num_support, replace=False)\n",
-    "        query_indices = np.setdiff1d(all_indices, support_indices)\n",
-    "        support_X = X[support_indices]\n",
-    "        query_X = X[query_indices]\n",
-    "        support_y = [y] * self.num_support\n",
-    "        query_y = [y] * len(query_indices)\n",
-    "\n",
-    "        return support_X, support_y, query_X, query_y\n",
     "\n",
     "################################################################################################\n",
     "################################################################################################\n",
