--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -251,19 +251,55 @@
     "            inner_optimizer.step()\n",
     "\n",
     "        return adapted_model\n",
-    "    \n",
+    "    '''\n",
+    "    R_E = \n",
+    "    [\n",
+    "        [\n",
+    "            sigma_s1^E1, ..., sigma_s#^E1\n",
+    "        ],\n",
+    "        [\n",
+    "            sigma_s1^E2, ..., sigma_s#^E2\n",
+    "        ], ...,\n",
+    "        [\n",
+    "            sigma_s1^EN, ..., sigma_s#^EN\n",
+    "        ]\n",
+    "    ]\n",
+    "    '''\n",
     "    #self.k = segment lenght\n",
     "    def _compute_loss(self, model, X, y):\n",
     "        X_tensor = torch.tensor(X, dtype=torch.float32)\n",
     "        y_tensor = torch.tensor(y, dtype=torch.float32)  \n",
     "        output_reward = model(X_tensor)\n",
     "        N_o, _ = output_reward.shape\n",
-    "                # op = self.compare_probabilities(r1, r2)\n",
-    "            \n",
+    "        out_mat = np.zeros(self.num_tasks, self.episode_per_tasks, self.num_segments)\n",
+    "        y_mat = np.zeros(self.num_tasks, self.episode_per_tasks, self.num_segments)\n",
     "\n",
+    "        T = self.episode_per_task*self.k*self.num_segments\n",
+    "        for i in range(0, output_reward.shape[0], self.k):\n",
+    "            ind = i % T\n",
+    "            task_num = i // T\n",
+    "            ep = ind // (self.num_segments * self.k)\n",
+    "            seg = ind % (self.num_segments * self.k)\n",
+    "            out_mat[task_num, ep, seg] = np.sum(output_reward[i : i+self.k])\n",
+    "            y_mat[task_num, ep, seg ] = np.sum(y_tensor[i: i+self.k])\n",
+    "        \n",
+    "        loss = 0.0\n",
+    "        for i in range(self.num_tasks):\n",
+    "            for j in range(self.num_segments):\n",
+    "                for k in range(j, self.num_segments):\n",
+    "                    out_seg_j = out_mat[i, :, j].squeeze()\n",
+    "                    out_seg_k = out_mat[i, :, k].squeeze()\n",
+    "                    y_seg_j = y_mat[i, :, j].squeeze()\n",
+    "                    y_seg_k = y_mat[i, :, k].squeeze() \n",
     "\n",
-    "\n",
-    "        loss = self.reward_criterion(op, y_tensor)\n",
+    "                    # comparison\n",
+    "                    exp_j = np.exp(out_seg_j)\n",
+    "                    exp_k = np.exp(out_seg_k)\n",
+    "                    out_jk = exp_j / (exp_j + exp_k)\n",
+    "                    if (y_seg_j >= y_seg_k):\n",
+    "                        loss += -np.log(out_jk)\n",
+    "                    else:\n",
+    "                        loss += -np.log(1 - out_jk)\n",
     "        return loss\n",
     "\n",
     "\n",
