convert data to col vector

--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,11 +200,14 @@
     "                    ep_list=ep_list[0]\n",
     "                else:\n",
     "                    ep_list=np.array(ep_list,dtype=object)\n",
+    "                    ep_list = ep_list.reshape(-1,1) # convert row vector to col vector\n",
     "                task_list.append(ep_list)\n",
     "            task_list = np.array(task_list, dtype=object)\n",
+    "            task_list=task_list.reshape(-1,1) # convert row vector to col vector\n",
     "            X.append(task_list)\n",
     "        y=np.array(y,dtype=object)\n",
     "        X = np.array(X,dtype=object)\n",
+    "        X=X.reshape(-1,1) # convert row vector to col vector\n",
     "\n",
     "        # All row vectors now, just transpose to make column vectors\n",
     "        \n",
@@ -346,206 +349,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y stuff\n",
-      "(12236,)\n",
-      "(29,)\n",
-      "[85      4.168999\n",
-      " 86      4.377440\n",
-      " 87      4.576863\n",
-      " 88      4.762183\n",
-      " 89      4.930076\n",
-      " 90      5.072768\n",
-      " 91      5.182332\n",
-      " 92      5.254492\n",
-      " 93      5.287608\n",
-      " 94      5.285057\n",
-      " 95      5.254955\n",
-      " 96      5.210855\n",
-      " 97      5.180713\n",
-      " 98      5.192379\n",
-      " 99      5.254183\n",
-      " 100     5.364913\n",
-      " 101     5.518336\n",
-      " 102     5.703803\n",
-      " 103     5.909175\n",
-      " 104     6.122326\n",
-      " 105     6.330786\n",
-      " 106     6.523500\n",
-      " 107     6.690452\n",
-      " 108     6.824387\n",
-      " 109     6.916635\n",
-      " 110     6.968943\n",
-      " 111     6.992448\n",
-      " 112     6.999481\n",
-      " 113    10.000000\n",
-      " Name: reward, dtype: float32 195     5.395178\n",
-      "                              196     5.352249\n",
-      "                              197     5.290116\n",
-      "                              198     5.238499\n",
-      "                              199     5.231824\n",
-      "                              200     5.281853\n",
-      "                              201     5.388639\n",
-      "                              202     5.545058\n",
-      "                              203     5.736720\n",
-      "                              204     5.947789\n",
-      "                              205     6.163264\n",
-      "                              206     6.370056\n",
-      "                              207     6.556854\n",
-      "                              208     6.715075\n",
-      "                              209     6.833787\n",
-      "                              210     6.909848\n",
-      "                              211     6.953248\n",
-      "                              212     6.975458\n",
-      "                              213     6.985471\n",
-      "                              214     6.989141\n",
-      "                              215     6.989213\n",
-      "                              216     6.986286\n",
-      "                              217     6.982344\n",
-      "                              218     6.981177\n",
-      "                              219     6.984988\n",
-      "                              220     6.992873\n",
-      "                              221     6.999490\n",
-      "                              222    10.000000\n",
-      "                              Name: reward, dtype: float32\n",
-      " 303     4.140177\n",
-      " 304     4.378352\n",
-      " 305     4.615999\n",
-      " 306     4.848388\n",
-      " 307     5.067054\n",
-      " 308     5.261878\n",
-      " 309     5.426098\n",
-      " 310     5.555837\n",
-      " 311     5.647617\n",
-      " 312     5.696704\n",
-      " 313     5.698862\n",
-      " 314     5.658449\n",
-      " 315     5.591928\n",
-      " 316     5.531457\n",
-      " 317     5.509769\n",
-      " 318     5.541228\n",
-      " 319     5.628977\n",
-      " 320     5.768902\n",
-      " 321     5.949157\n",
-      " 322     6.152203\n",
-      " 323     6.359958\n",
-      " 324     6.554084\n",
-      " 325     6.720260\n",
-      " 326     6.850459\n",
-      " 327     6.940043\n",
-      " 328     6.987321\n",
-      " 329    10.000000\n",
-      " Name: reward, dtype: float32 ... 3880    0.000000e+00\n",
-      "                                  3881    0.000000e+00\n",
-      "                                  3882    0.000000e+00\n",
-      "                                  3883    0.000000e+00\n",
-      "                                  3884    0.000000e+00\n",
-      "                                  3885    0.000000e+00\n",
-      "                                  3886    0.000000e+00\n",
-      "                                  3887    1.000000e+01\n",
-      "                                  3888    0.000000e+00\n",
-      "                                  3889    4.902848e-01\n",
-      "                                  3890    4.079865e-01\n",
-      "                                  3891    2.967224e-01\n",
-      "                                  3892    1.687122e-01\n",
-      "                                  3893    6.249629e-02\n",
-      "                                  3894    1.260778e-02\n",
-      "                                  3895    1.274526e-03\n",
-      "                                  3896    6.268124e-05\n",
-      "                                  3897    1.535392e-06\n",
-      "                                  3898    1.917267e-08\n",
-      "                                  3899    1.223648e-10\n",
-      "                                  3900    3.990124e-13\n",
-      "                                  3901    6.712264e-16\n",
-      "                                  3902    4.735427e-19\n",
-      "                                  3903    1.498527e-22\n",
-      "                                  3904    2.810561e-26\n",
-      "                                  3905    3.602223e-30\n",
-      "                                  3906    2.519801e-34\n",
-      "                                  3907    8.282956e-39\n",
-      "                                  3908    1.247156e-43\n",
-      "                                  3909    0.000000e+00\n",
-      "                                  Name: reward, dtype: float32\n",
-      " 3937    2.726718e-06\n",
-      " 3938    1.058531e-06\n",
-      " 3939    1.789202e-07\n",
-      " 3940    2.057762e-08\n",
-      " 3941    3.071069e-09\n",
-      " 3942    7.671574e-10\n",
-      " 3943    3.203958e-10\n",
-      " 3944    1.858122e-10\n",
-      " 3945    1.469384e-10\n",
-      " 3946    1.849590e-10\n",
-      " 3947    3.282035e-10\n",
-      " 3948    4.704636e-10\n",
-      " 3949    6.679124e-10\n",
-      " 3950    1.261729e-09\n",
-      " 3951    2.960912e-09\n",
-      " 3952    7.622108e-09\n",
-      " 3953    2.040867e-08\n",
-      " 3954    5.758675e-08\n",
-      " 3955    1.657118e-07\n",
-      " 3956    4.846069e-07\n",
-      " 3957    1.320842e-06\n",
-      " 3958    3.100399e-06\n",
-      " 3959    4.831671e-06\n",
-      " 3960    5.764904e-06\n",
-      " 3961    6.448492e-06\n",
-      " 3962    8.147456e-06\n",
-      " 3963    1.163767e-05\n",
-      " Name: reward, dtype: float32 3964    1.447694e-05\n",
-      "                              3965    1.725620e-05\n",
-      "                              3966    1.888534e-05\n",
-      "                              3967    1.943652e-05\n",
-      "                              3968    1.911813e-05\n",
-      "                              3969    1.000000e+01\n",
-      "                              3970    0.000000e+00\n",
-      "                              3971    4.922575e-01\n",
-      "                              3972    4.131358e-01\n",
-      "                              3973    2.976142e-01\n",
-      "                              3974    1.653998e-01\n",
-      "                              3975    6.142158e-02\n",
-      "                              3976    1.288052e-02\n",
-      "                              3977    1.386396e-03\n",
-      "                              3978    7.458444e-05\n",
-      "                              3979    2.026411e-06\n",
-      "                              3980    2.771435e-08\n",
-      "                              3981    1.858080e-10\n",
-      "                              3982    6.071583e-13\n",
-      "                              3983    9.861689e-16\n",
-      "                              3984    7.049697e-19\n",
-      "                              3985    2.433261e-22\n",
-      "                              3986    4.444141e-26\n",
-      "                              3987    5.326714e-30\n",
-      "                              3988    3.925320e-34\n",
-      "                              3989    1.548052e-38\n",
-      "                              3990    2.984766e-43\n",
-      "                              3991    0.000000e+00\n",
-      "                              3992    0.000000e+00\n",
-      "                              3993    0.000000e+00\n",
-      "                              3994    0.000000e+00\n",
-      "                              3995    0.000000e+00\n",
-      "                              3996    0.000000e+00\n",
-      "                              3997    0.000000e+00\n",
-      "                              3998    1.401298e-45\n",
-      "                              3999    6.740246e-43\n",
-      "                              4000    4.531435e-40\n",
-      "                              4001    2.568704e-37\n",
-      "                              4002    1.043394e-34\n",
-      "                              4003    2.821653e-32\n",
-      "                              4004    5.392559e-30\n",
-      "                              4005    8.729262e-28\n",
-      "                              Name: reward, dtype: float32]\n",
-      "X stuff\n",
-      "(10,)\n",
-      "(1226,)\n",
-      "(29, 4)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1226, 1)\n",
+      "(1202, 1)\n",
+      "(10, 1)\n",
       "Data Preparation Done.\n",
       "\n"
      ]
@@ -564,19 +385,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mw_valid/cls_shelf-place-v2\n",
-      "mw_valid/cls_drawer-open-v2\n",
-      "mw_valid/cls_lever-pull-v2\n",
-      "mw_valid/cls_sweep-into-v2\n",
-      "\n",
-      "Test Accuracy: 0.6552772808586762\n"
+      "mw_valid/cls_lever-pull-v2\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot concatenate object of type '<class 'numpy.ndarray'>'; only Series and DataFrame objs are valid",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(dir_name)\n\u001b[1;32m      6\u001b[0m         df \u001b[38;5;241m=\u001b[39m read_file(dir_name)\n\u001b[0;32m----> 7\u001b[0m         test \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m test\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     10\u001b[0m Test \u001b[38;5;241m=\u001b[39m PreferenceMAML(test, input_size, hidden_size1, hidden_size2, output_size)\n",
+      "File \u001b[0;32m~/miniconda3/envs/few-shot-pref-rl/lib/python3.8/site-packages/pandas/core/reshape/concat.py:372\u001b[0m, in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[1;32m    369\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m copy \u001b[38;5;129;01mand\u001b[39;00m using_copy_on_write():\n\u001b[1;32m    370\u001b[0m     copy \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m--> 372\u001b[0m op \u001b[38;5;241m=\u001b[39m \u001b[43m_Concatenator\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    373\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobjs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    374\u001b[0m \u001b[43m    \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    375\u001b[0m \u001b[43m    \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    376\u001b[0m \u001b[43m    \u001b[49m\u001b[43mjoin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    377\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    378\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlevels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    379\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnames\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnames\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    380\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverify_integrity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverify_integrity\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    381\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    382\u001b[0m \u001b[43m    \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    383\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    385\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m op\u001b[38;5;241m.\u001b[39mget_result()\n",
+      "File \u001b[0;32m~/miniconda3/envs/few-shot-pref-rl/lib/python3.8/site-packages/pandas/core/reshape/concat.py:462\u001b[0m, in \u001b[0;36m_Concatenator.__init__\u001b[0;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[1;32m    457\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, (ABCSeries, ABCDataFrame)):\n\u001b[1;32m    458\u001b[0m         msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    459\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot concatenate object of type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(obj)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m; \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    460\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124monly Series and DataFrame objs are valid\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    461\u001b[0m         )\n\u001b[0;32m--> 462\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(msg)\n\u001b[1;32m    464\u001b[0m     ndims\u001b[38;5;241m.\u001b[39madd(obj\u001b[38;5;241m.\u001b[39mndim)\n\u001b[1;32m    466\u001b[0m \u001b[38;5;66;03m# get the sample\u001b[39;00m\n\u001b[1;32m    467\u001b[0m \u001b[38;5;66;03m# want the highest ndim that we have, and must be non-empty\u001b[39;00m\n\u001b[1;32m    468\u001b[0m \u001b[38;5;66;03m# unless all objs are empty\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot concatenate object of type '<class 'numpy.ndarray'>'; only Series and DataFrame objs are valid"
      ]
     }
    ],
@@ -630,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
