--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -153,10 +153,11 @@
     "        # return episodes\n",
     "\n",
     "    def form_sigma_groups(self, episode):\n",
-    "        num_segments = int(episode.shape[0] / self.k)\n",
+    "        #num_segments = int(episode.shape[0] / self.k)\n",
+    "        split_indices = np.arange(self.k, episode.shape[0], self.k)\n",
     "        # print(num_segments)\n",
-    "        if num_segments != 0:\n",
-    "            l_segment = np.array_split(episode.iloc[::-1], num_segments)\n",
+    "        if len(split_indices) != 0:\n",
+    "            l_segment = np.array_split(episode.iloc[::-1], split_indices)\n",
     "            for i in range(len(l_segment)):\n",
     "                l_segment[i] = l_segment[i].iloc[::-1]\n",
     "            return l_segment\n",
