--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,9 @@
     "    def construct_episodes(self, ml10):\n",
     "        # episodes - n (tasks) x num_episode (each npz file)  , each cell is a dataframe of the episode \n",
     "        self.episodes = []\n",
-    "        ml10 = ml10[1:]\n",
     "        for task in ml10:\n",
-    "            \n",
+    "            if(len(task)==0):\n",
+    "                continue\n",
     "            task_episodes=[]\n",
     "            row_index = task[task['done'] == True].index.tolist()\n",
     "            prev=0\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
