--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -157,7 +157,7 @@
     "        split_indices = np.arange(self.k, episode.shape[0], self.k)\n",
     "        # print(num_segments)\n",
     "        if len(split_indices) != 0:\n",
-    "            l_segment = np.array_split(episode.iloc[::-1], split_indices)\n",
+    "            l_segment = np.array_split(episode.iloc[::-1][:(self.k*(episode.shape[0] // self.k))], split_indices)\n",
     "            for i in range(len(l_segment)):\n",
     "                l_segment[i] = l_segment[i].iloc[::-1]\n",
     "            return l_segment\n",
