--- a/scripts/MAML_NEW.ipynb
+++ b/scripts/MAML_NEW.ipynb
@@ -618,7 +618,7 @@
     "\n",
     "for ep in range(inner_epochs):\n",
     "    for i in range(len(t_r)):\n",
-    "        for j in  range ( len (t_r[i])//8 ) : # //8 to reduce compute time ## Need to optimize\n",
+    "        for j in  range (len (t_r[i])) : # //8 to reduce compute time ## Need to optimize\n",
     "            rewards_1 = t_r_actual[i][j][ep]\n",
     "            reward_pred_1 = t_r[i][j][ep]\n",
     "            for k in range(len(t_r[i])//8):\n",
@@ -627,9 +627,10 @@
     "                    reward_pred_2 = t_r[i][k][ep]\n",
     "                    p_reward_pred = np.exp(reward_pred_1) / ( np.exp(reward_pred_1) + np.exp(reward_pred_2) )\n",
     "                    if rewards_1 >= rewards_2:\n",
-    "                        seg_pair_loss.append(-np.log(1 - p_reward_pred))\n",
-    "                    else:\n",
     "                        seg_pair_loss.append(-np.log(p_reward_pred))\n",
+    "                    else:\n",
+    "                        seg_pair_loss.append(-np.log(1 - p_reward_pred))\n",
+    "                        \n",
     "                \n",
     "        \n",
     "\n",
