--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -91,6 +91,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import warnings\n",
+    "import copy\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "class Model(nn.Module):\n",
@@ -242,43 +243,51 @@
     "            #     y.append(self.compare_probabilities(sigma1, sigma2))\n",
     "\n",
     "        return X, y\n",
-    "\n",
-    "    def setup_optimizers(self, optim_class, optim_kwargs):\n",
-    "        self.optim = optim_class(self.model.parameters(), **optim_kwargs)\n",
-    "\n",
-    "    def _train_step(self, X, y):\n",
-    "        self.optim.zero_grad()\n",
-    "        loss = self._outer_step(X, y)\n",
-    "        loss.backward()\n",
-    "        self.optim.step()\n",
-    "        return loss.item()\n",
-    "\n",
-    "    def _outer_step(self, X, y):\n",
-    "        outer_losses = []\n",
-    "        for i in tqdm(range(len(X))):\n",
-    "            if len(X[i])>self.num_support:\n",
-    "                support_X, support_y, query_X, query_y = self._split_support_query(X[i], y[i])\n",
-    "                # Inner loop (adaptation)\n",
-    "                adapted_model = self._inner_loop(support_X, support_y)\n",
-    "                # Compute loss using the adapted model on query set\n",
-    "                query_loss = self._compute_loss(adapted_model, query_X, query_y)\n",
-    "                outer_losses.append(query_loss)\n",
-    "        return torch.mean(torch.stack(outer_losses))\n",
-    "\n",
-    "    def _inner_loop(self, support_X, support_y):\n",
-    "        adapted_model = Model(self.model.fc1.in_features, self.model.fc1.out_features,\n",
-    "                              self.model.fc2.out_features, self.model.fc3.out_features)\n",
-    "        adapted_model.load_state_dict(self.model.state_dict())\n",
-    "\n",
-    "        inner_optimizer = optim.Adam(adapted_model.parameters(), lr=self.inner_lr)\n",
-    "\n",
-    "        for _ in range(self.num_inner_steps):\n",
-    "            inner_optimizer.zero_grad()\n",
-    "            loss = self._compute_loss(adapted_model, support_X, support_y)\n",
+    "    \n",
+    "    def train(self, num_epochs):\n",
+    "        optimizer = optim.Adam(self.model.parameters(), lr=self.outer_lr)\n",
+    "        for epoch in range(num_epochs):\n",
+    "            loss = 0\n",
+    "            for t in range(self.num_tasks):\n",
+    "                X, y = self.batch_data(task = t)\n",
+    "                model_t = copy.deepcopy(self.model)\n",
+    "                model_t = self._inner_loop(model_t, X, y)\n",
+    "                loss += self._compute_loss(model_t, X, y)\n",
+    "                print(f\"Epoch {epoch+1}/{num_epochs} - Task {t+1}/{self.num_tasks}\")\n",
+    "            loss = torch.tensor([loss], requires_grad=True)\n",
     "            loss.backward()\n",
-    "            inner_optimizer.step()\n",
+    "            optimizer.step()\n",
+    "            \n",
     "\n",
-    "        return adapted_model\n",
+    "            \n",
+    "\n",
+    "    # def _train_step(self, X, y):\n",
+    "    #     self.optim.zero_grad()\n",
+    "    #     loss = self._outer_step(X, y)\n",
+    "    #     loss.backward()\n",
+    "    #     self.optim.step()\n",
+    "    #     return loss.item()\n",
+    "\n",
+    "    # def _outer_step(self, X, y):\n",
+    "    #     outer_losses = []\n",
+    "    #     for i in tqdm(range(len(X))):\n",
+    "    #         if len(X[i])>self.num_support:\n",
+    "    #             support_X, support_y, query_X, query_y = self._split_support_query(X[i], y[i])\n",
+    "    #             # Inner loop (adaptation)\n",
+    "    #             adapted_model = self._inner_loop(support_X, support_y)\n",
+    "    #             # Compute loss using the adapted model on query set\n",
+    "    #             query_loss = self._compute_loss(adapted_model, query_X, query_y)\n",
+    "    #             outer_losses.append(query_loss)\n",
+    "    #     return torch.mean(torch.stack(outer_losses))\n",
+    "\n",
+    "    def _inner_loop(self, model, X, y):\n",
+    "        loss = self._compute_loss(model, X, y)\n",
+    "        opt = optim.Adam(model.parameters(), lr=self.inner_lr)\n",
+    "        opt.zero_grad()\n",
+    "        loss.backward()\n",
+    "        opt.step()\n",
+    "\n",
+    "        return model\n",
     "    '''\n",
     "    R_E = \n",
     "    [\n",
@@ -309,7 +318,7 @@
     "            out_mat[i, :] = np.sum(output_reward[i*self.k:(i+1)*self.k])\n",
     "            y_mat[i, :] = np.sum(y_tensor[i*self.k:(i+1)*self.k])\n",
     "        \n",
-    "        loss = 0.0\n",
+    "        loss = 0\n",
     "        out_mat = np.exp(out_mat)\n",
     "        for i in range(N):\n",
     "            sig_1 = out_mat[i, 0]\n",
@@ -323,6 +332,8 @@
     "                        loss += -np.log(out_jk)\n",
     "                    else:\n",
     "                        loss += -np.log(1 - out_jk)\n",
+    "\n",
+    "        loss = torch.tensor([loss], requires_grad=True)\n",
     "        return loss\n",
     "\n",
     "\n",
