--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -92,6 +92,7 @@
     "from tqdm import tqdm\n",
     "import warnings\n",
     "import copy\n",
+    "import matplotlib.pyplot as plt\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "class Model(nn.Module):\n",
@@ -251,15 +252,26 @@
     "    \n",
     "    def train(self, num_epochs):\n",
     "        optimizer = optim.Adam(self.model.parameters(), lr=self.outer_lr)\n",
-    "        for epoch in range(num_epochs):\n",
+    "        plt_x = np.arange(0, num_epochs)\n",
+    "        plt_y = np.zeros(num_epochs)\n",
+    "        for epoch in tqdm(range(num_epochs)):\n",
     "            loss = 0\n",
     "            for t in range(self.num_tasks):\n",
     "                X, y = self.batch_data(task = t)\n",
     "                model_t = copy.deepcopy(self.model)\n",
     "                model_t = self._inner_loop(model_t, X, y)\n",
     "                loss += self._compute_loss(model_t, X, y)\n",
-    "                print(f\"Epoch {epoch+1}/{num_epochs} - Task {t+1}/{self.num_tasks}\")\n",
+    "                # print(f\"Epoch {epoch+1}/{num_epochs} - Task {t+1}/{self.num_tasks}\")\n",
     "            loss = torch.tensor([loss], requires_grad=True)\n",
+    "            plt_y[epoch] = loss\n",
+    "            if epoch % 25 == 0:\n",
+    "                print(f'Epoch {epoch+1}/{num_epochs}, Loss: {loss}')\n",
+    "                plt.plot(plt_x, plt_y)\n",
+    "                plt.xlabel('Epochs')\n",
+    "                plt.ylabel('Loss')\n",
+    "                plt.show()\n",
+    "\n",
+    "\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            \n",
